<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="derp_version">DerpFest version</string>
    <string name="derp_version_default">Unknown</string>
    <string name="header_category_personalization">UI settings</string>
    <string name="derpquest_title">DerpQuest</string>
    <string name="derp_title">DerpFest Settings</string>
    <string name="derpquest_settings_title">Categories</string>
    <string name="derp_about_title">About DerpFest</string>
    <string name="derp_about_summary">A little info about the team</string>
    <string name="derp_telegram_title">DerpFest Telegram Community</string>
    <string name="derp_telegram_summary">Tap here to open our wonderful community!</string>
    <string name="derp_github_title">DerpFest Github</string>
    <string name="derp_github_summary">Tap here to open our Github!</string>
    <string name="derp_about_info_summary">This is a small project based on AOSiP for the Oneplus 5T. We try to be a platform for beginners and support the Custom ROM community with our own unique contributions as well. This ROM exists thanks to our base - AOSiP, Thank you!</string>
    <string name="derp_about_team">DerpFest Team</string>
    <string name="derp_about_alex" translatable="false">Alexander Brunswig</string>
    <string name="derp_about_alex_summary" translatable="false">Founder</string>
    <string name="derp_about_ido" translatable="false">Ido Ben Hur</string>
    <string name="derp_about_ido_summary" translatable="false">Lead Dev</string>
    <string name="derp_about_david" translatable="false">David Setiawan</string>
    <string name="derp_about_david_summary" translatable="false">QA</string>
    <string name="about_maintainer">Maintainer</string>
    <string name="derp_about_maintainer">The maintainer for your device is</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="enabled">Enabled</string>
    <string name="add">Add</string>
    <string name="choose_app">Choose app</string>
    <string name="systemui_restart_title">SystemUI restart required</string>
    <string name="systemui_restart_message">For all changes to take effect, a SystemUI restart is required. Restart SystemUI now?</string>
    <string name="statusbar_bar_title">Statusbar</string>
    <string name="statusbar_bar_summary">Adjust various statusbar elements</string>
    <string name="icon_category">Icons</string>
    <string name="battery_category">Battery</string>
    <string name="use_old_mobiletype_title">Use old mobile type style</string>
    <string name="use_old_mobiletype_summary">Merge signal and type icons</string>
    <string name="mobile_data_style_info_title">Change take effect on next update of mobile signal icon.</string>
    <string name="show_fourg_title">Show 4G instead of LTE</string>
    <string name="show_fourg_summary">Replaces LTE statusbar indicators with 4G</string>
    <string name="statusbar_privacy_indicators_title">Privacy indicators</string>
    <string name="statusbar_privacy_indicators_summary">Show privacy indicators on statusbar</string>
    <string name="volte_switch_title">VoLTE icon</string>
    <string name="volte_switch_summary">Display VoLTE icon</string>
    <string name="volte_icon_asus">VoLTE Asus Icon</string>
    <string name="volte_icon_title">VoLTE icon</string>
    <string name="volte_icon_summary">Display VoLTE icon</string>
    <string name="volte_icon_style_title">Select VoLTE Icon</string>
    <string name="volte_icon_vo">Vo Only Icon</string>
    <string name="volte_icon_volte">VoLTE Icon</string>
    <string name="volte_icon_oos">VoLTE OOS Icon</string>
    <string name="volte_icon_hd">HD Icon</string>
    <string name="volte_icon_volit">VoLIT Icon</string>
    <string name="vowifi_switch_title">VoWiFi icon</string>
    <string name="vowifi_switch_summary">Display VoWiFi icon</string>
    <string name="status_bar_style_title">Style</string>
    <string name="status_bar_clock">Clock &amp; Date</string>
    <string name="clock_enabled">Enabled</string>
    <string name="clock_disabled">Disabled</string>
    <string name="status_bar_clock_style_reset">Reset color</string>
    <string name="status_bar_show_clock_title">Show clock &amp; date</string>
    <string name="status_bar_clock_seconds_title">Clock seconds</string>
    <string name="status_bar_clock_seconds_summary">Display seconds next to clock in status bar</string>
    <string name="status_bar_am_pm_title">AM/PM</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="enable_clock_weekday">Day of the week</string>
    <string name="enable_clock_weekday_summary">Abbreviated day of the week before the time</string>
    <string name="dont_show">Don\'t show</string>
    <string name="clock_date_display">Date</string>
    <string name="status_bar_time_cat">Time</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="am_pm_clock_normal">Normal font size</string>
    <string name="am_pm_clock_small">Small font size</string>
    <string name="am_pm_clock_none">Don\'t show</string>
    <string name="clock_date_display_none">Don\'t show</string>
    <string name="clock_date_display_small">Small font size</string>
    <string name="clock_date_display_normal">Normal font size</string>
    <string name="clock_date_style_normal">Normal</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_right">Right of time</string>
    <string name="clock_date_left">Left of time</string>
    <string name="clock_date_position">Date position</string>
    <string name="clock_position">Clock position</string>
    <string name="clock_position_right">Right clock</string>
    <string name="clock_position_center">Center clock</string>
    <string name="clock_position_left">Left clock</string>
    <string name="status_bar_icons_title">Status bar icons</string>
    <string name="status_bar_system_icons_title">System icons</string>
    <string name="status_bar_system_icons_summary">Control which status bar icons are shown</string>
    <string name="battery_style_category_title">Battery</string>
    <string name="battery_percent_title">Battery percent</string>
    <string name="status_bar_battery_style_title">Battery style</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait (default)</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_dotted_circle">Circle (Dotted)</string>
    <string name="status_bar_battery_style_filled_circle">Circle (Filled)</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden (default)</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="qs_battery_percentage_title">QS battery percentage</string>
    <string name="qs_battery_percentage_summary">Show battery percentage in the QS header instead of battery estimate</string>
    <string name="net_monitor_category_title">Network monitor</string>
    <string name="network_traffic_state_title">Enable network monitor</string>
    <string name="network_traffic_state_sb_title">Always show net monitor</string>
    <string name="network_traffic_state_summary">Show net download activity, or upload if bigger, in expanded statusbar</string>
    <string name="network_traffic_state_sb_summary">Keep showing net activity also in normal statusbar</string>
    <string name="derp_logo_title">DerpFest Logo</string>
    <string name="derp_logo_summary">Let everyone know that you\'re using DerpFest when they see your screen</string>
    <string name="status_bar_logo_style_title">Custom logo style</string>
    <string name="status_carrier_title">Carrier Label</string>
    <string name="lockscreen_title">Lockscreen</string>
    <string name="fingerprint_category">Fingerprint</string>
    <string name="lockscreen_cover_filter_title">Media cover art filter</string>
    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="fprint_error_vib_title">Fingerprint error vibration</string>
    <string name="fprint_error_vib_summary">Vibrate on error fingerprint authentication</string>
    <string name="lockscreen_show_status_bar_title">Statusbar</string>
    <string name="lockscreen_show_status_bar_summary">Show statusbar on the lockscreen</string>
    <string name="charging_animation_title">Charging animation</string>
    <string name="charging_animation_summary">Display an animation when the device is plugged in</string>
    <string name="lockscreen_media_blur_title">Media cover art blur level</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
    <string name="lockscreen_tuner_title">Shortcuts</string>
    <string name="lockscreen_battery_info_title">Battery info</string>
    <string name="lockscreen_battery_info_summary">Display current battery status on lockscreen while charging</string>
    <string name="lockscreen_visualizer_title">Visualizer</string>
    <string name="lockscreen_visualizer_summary">Display music visualizer when available</string>
    <string name="system_category">System Settings</string>
    <string name="aspect_ratio_apps_enabled_title">Enable scaling</string>
    <string name="aspect_ratio_apps_enabled_summary">Allow legacy apps to use full screen</string>
    <string name="aspect_ratio_apps_list_summary"></string>
    <string name="aspect_ratio_apps_list_title">Apps allowed to use scaling</string>
    <string name="aspect_ratio_category_title">Legacy app scaling</string>
    <string name="aspect_ratio_apps_info">Applications need to be restarted after changes</string>
    <string name="lockscreen_clock_category_title">Clock and date options</string>
    <string name="lock_clock_font_title">Clock font options</string>
    <string name="lock_clock_font_summary">Change the default font of the lockscreen clock widget</string>
    <string name="lock_clock_font_dialog_title">Select lock clock font</string>
    <string name="lock_date_font_title">Date font options</string>
    <string name="lock_date_font_summary">Change the default font of the lockscreen date widget</string>
    <string name="lock_date_font_dialog_title">Select lock date font</string>
    <string name="corners_category">Corners</string>
    <string name="corner_radius">Rounded corner radius</string>
    <string name="content_padding">Corner content padding</string>
    <string name="status_bar_padding">Statusbar extra padding</string>
    <string name="corner_fwvals">Use framework values</string>
    <string name="corner_fwvals_summary">Useful if the device actually has rounded corners</string>
    <string name="music_options">Music Options</string>
    <string name="headset_connect_player_title">Launch music app on headset connection</string>
    <string name="headset_connect_player_summary">Launch the default music app when headset is connected</string>
    <string name="ringtone_focus_mode_title">When headset connected, incoming call plays on</string>
</resources>