<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2015-2020 Android Open Source Illusion Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/lockscreen_title" >

    <Preference
            android:title="@string/lockscreen_tuner_title" >
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.LockscreenActivity" />
    </Preference>

    <com.derp.support.preference.SystemSettingSwitchPreference
        android:key="lockscreen_battery_info"
        android:title="@string/lockscreen_battery_info_title"
        android:summary="@string/lockscreen_battery_info_summary"
        android:defaultValue="false" />

    <com.derp.support.preference.SystemSettingSwitchPreference
        android:key="charging_animation"
        android:title="@string/charging_animation_title"
        android:summary="@string/charging_animation_summary"
        android:defaultValue="false" />

    <com.derp.support.preference.SystemSettingSwitchPreference
        android:key="lockscreen_show_status_bar"
        android:title="@string/lockscreen_show_status_bar_title"
        android:summary="@string/lockscreen_show_status_bar_summary"
        android:defaultValue="true" />

    <Preference
        android:title="@string/lockscreen_visualizer_title"
        android:summary="@string/lockscreen_visualizer_summary"
        android:fragment="com.derpquest.settings.lockscreen.LockScreenVisualizer" />

    <PreferenceCategory
        android:key="album_art_category"
        android:title="@string/media_art_title" >

        <com.derp.support.preference.SystemSettingSwitchPreference
            android:key="lockscreen_media_metadata"
            android:title="@string/media_art_title"
            android:summary="@string/media_art_summary"
            android:defaultValue="true" />

        <com.derp.support.preference.SystemSettingListPreference
            android:key="lockscreen_album_art_filter"
            android:title="@string/lockscreen_cover_filter_title"
            android:entries="@array/lockscreen_cover_filter_entries"
            android:entryValues="@array/lockscreen_cover_filter_values"
            android:dependency="lockscreen_media_metadata"
            android:defaultValue="5" />

         <com.derp.support.preference.CustomSystemSeekBarPreference
            android:key="lockscreen_media_blur"
            android:title="@string/lockscreen_media_blur_title"
            settings:allowEditText="true"
            android:max="25"
            android:min="0"
            android:defaultValue="25"
            settings:units="dp" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="fingerprint_category"
        android:title="@string/fingerprint_category">

        <com.derp.support.preference.SystemSettingSwitchPreference
            android:key="fingerprint_success_vib"
            android:title="@string/fprint_sucess_vib_title"
            android:summary="@string/fprint_sucess_vib_summary"
            android:defaultValue="true" />

        <com.derp.support.preference.SystemSettingSwitchPreference
            android:key="fingerprint_error_vib"
            android:title="@string/fprint_error_vib_title"
            android:summary="@string/fprint_error_vib_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="lockscreen_clock_category"
        android:title="@string/lockscreen_clock_category_title" >

        <ListPreference
            android:key="lock_clock_font_style"
            android:title="@string/lock_clock_font_title"
            android:dialogTitle="@string/lock_clock_font_dialog_title"
            android:entries="@array/lock_clock_fonts_entries"
            android:entryValues="@array/lock_clock_fonts_values"
            android:summary="@string/lock_clock_font_summary"
            android:persistent="false" />

        <ListPreference
            android:key="lock_date_fonts"
            android:title="@string/lock_date_font_title"
            android:dialogTitle="@string/lock_date_font_dialog_title"
            android:entries="@array/lock_date_fonts_entries"
            android:entryValues="@array/lock_date_fonts_values"
            android:summary="@string/lock_date_font_summary"
            android:persistent="false" />
    </PreferenceCategory>

</PreferenceScreen>
