<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015-2020 Android Open Source Illusion Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/statusbar_bar_title" >

    <Preference
        android:key="battery"
        android:title="@string/battery_category"
        android:fragment="com.derpquest.settings.statusbar.Battery" />

    <Preference
        android:key="carrier_label"
        android:title="@string/status_carrier_title"
        android:fragment="com.derpquest.settings.statusbar.CarrierLabel" />

    <Preference
        android:key="clock"
        android:title="@string/status_bar_clock"
        android:fragment="com.derpquest.settings.statusbar.Clock" />

    <Preference
        android:key="network_traffic"
        android:title="@string/network_traffic_state_title"
        android:fragment="com.derpquest.settings.statusbar.NetworkTraffic" />

    <PreferenceCategory
        android:title="@string/status_bar_icons_title">
        <PreferenceScreen
            android:key="status_bar_icons"
            android:title="@string/status_bar_system_icons_title"
            android:summary="@string/status_bar_system_icons_summary">
            <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
        </PreferenceScreen>

         <SwitchPreference
            android:key="status_bar_logo"
            android:title="@string/derp_logo_title"
            android:summary="@string/derp_logo_summary"
            android:defaultValue="false" />

         <ListPreference
            android:key="status_bar_logo_style"
            android:entries="@array/status_bar_logo_style_entries"
            android:entryValues="@array/status_bar_logo_style_values"
            android:summary="%s"
            android:dependency="status_bar_logo"
            android:title="@string/status_bar_logo_style_title" />

        <com.derp.support.preference.SystemSettingSwitchPreference
            android:key="bluetooth_show_battery"
            android:title="@string/bluetooth_battery_title"
            android:summary="@string/bluetooth_battery_summary"
            android:defaultValue="true"/>

         <com.derp.support.preference.SystemSettingSwitchPreference
            android:key="show_volte_icon"
            android:title="@string/volte_switch_title"
            android:summary="@string/volte_switch_summary"
            android:defaultValue="false" />

         <com.derp.support.preference.SystemSettingListPreference
            android:key="volte_icon_style"
            android:title="@string/volte_icon_style_title"
            android:entries="@array/volte_icon_type_entries"
            android:entryValues="@array/volte_icon_type_values"
            android:summary="%s"
            android:defaultValue="0"/>

         <com.derp.support.preference.SystemSettingSwitchPreference
            android:key="show_fourg"
            android:title="@string/show_fourg_title"
            android:summary="@string/show_fourg_summary"
            android:defaultValue="false" />

         <com.derp.support.preference.SystemSettingSwitchPreference
            android:key="use_old_mobiletype"
            android:title="@string/use_old_mobiletype_title"
            android:summary="@string/use_old_mobiletype_summary"
            android:defaultValue="false" />

         <Preference
            android:icon="@drawable/ic_info_outline_24dp"
            android:persistent="false"
            android:summary="@string/mobile_data_style_info_title" />
    </PreferenceCategory>

</PreferenceScreen>
