<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2015-2020 Android Open Source Illusion Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/system_category" >

    <PreferenceCategory
        android:key="aspect_ratio_category"
        android:title="@string/aspect_ratio_category_title">

        <com.derp.support.preference.SystemSettingSwitchPreference
            android:key="aspect_ratio_apps_enabled"
            android:title="@string/aspect_ratio_apps_enabled_title"
            android:summary="@string/aspect_ratio_apps_enabled_summary"
            android:defaultValue="false" />

        <com.derpquest.settings.preference.AppMultiSelectListPreference
            android:dependency="aspect_ratio_apps_enabled"
            android:summary="@string/aspect_ratio_apps_list_summary"
            android:title="@string/aspect_ratio_apps_list_title"
            android:key="aspect_ratio_apps_list"
            android:persistent="false" />

        <com.derpquest.settings.preference.ScrollAppsViewPreference
            android:dependency="aspect_ratio_apps_enabled"
            android:key="aspect_ratio_apps_list_scroller"
            android:persistent="false"
            android:selectable="false" />

        <Preference
            android:dependency="aspect_ratio_apps_enabled"
            android:persistent="false"
            android:summary="@string/aspect_ratio_apps_info" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="corners_category"
        android:title="@string/corners_category" >

        <com.derp.support.preference.SecureSettingSwitchPreference
            android:key="sysui_rounded_fwvals"
            android:title="@string/corner_fwvals"
            android:summary="@string/corner_fwvals_summary"
            android:defaultValue="true"
            android:disableDependentsState="true" />

        <com.derp.support.preference.CustomSeekBarPreference
            android:key="sysui_rounded_size"
            android:title="@string/corner_radius"
            android:max="60"
            android:persistent="false"
            android:dependency="sysui_rounded_fwvals" />

        <com.derp.support.preference.CustomSeekBarPreference
            android:key="sysui_status_bar_padding"
            android:title="@string/status_bar_padding"
            android:max="30"
            android:persistent="false"
            android:dependency="sysui_rounded_fwvals" />

        <com.derp.support.preference.CustomSeekBarPreference
            android:key="sysui_rounded_content_padding"
            android:title="@string/content_padding"
            android:max="30"
            android:persistent="false"
            android:dependency="sysui_rounded_fwvals" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="launch_music"
        android:title="@string/music_options">

     <!-- Launch music player when headset is connected -->
    <com.derp.support.preference.SystemSettingSwitchPreference
        android:key="headset_connect_player"
        android:title="@string/headset_connect_player_title"
        android:summary="@string/headset_connect_player_summary"
        android:defaultValue="false" />

    <com.derp.support.preference.GlobalSettingListPreference
        android:key="ringtone_focus_mode"
        android:title="@string/ringtone_focus_mode_title"
        android:entries="@array/ringtone_focus_mode_entries"
        android:entryValues="@array/ringtone_focus_mode_values"
        android:defaultValue="1" />

    </PreferenceCategory>

</PreferenceScreen>
